--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@ Main 1
 
 Main 2
 
+Creado por el increíble Platzi team
+
 <p><img src="https://media.makeameme.org/created/i-did-it-b6015cea86.jpg" alt="Meme random"></p>
