--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@ Main 1
 Main 2
 
 Creado por el increíble Platzi team
-<<<<<<< HEAD
-=======
 Commit 2
 commit 3
->>>>>>> readme-mejorado
+
+Prueba 2
 
 <p><img src="https://media.makeameme.org/created/i-did-it-b6015cea86.jpg" alt="Meme random"></p>
