Prueba ammend, funciono?

--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@ commit 3
 
 Prueba 2
 
-<p><img src="https://media.makeameme.org/created/i-did-it-b6015cea86.jpg" alt="Meme random"></p>
+Prueba amend <- corregi el amend <p><img src="https://media.makeameme.org/created/i-did-it-b6015cea86.jpg"
+        alt="Meme random"></p>
