Reiniciare esto al final

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <h1>Hello World</h1>
 <p>My first Personal Page</p>
+<p>Experimento 1</p>
+<p>Experimento 2</p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
 
-Experimento 1
 
-Experimento 2
+
 
 Main 1
 
@@ -18,5 +26,5 @@ commit 3
 
 Prueba 2
 
-Prueba amend <- corregi el amend <p><img src="https://media.makeameme.org/created/i-did-it-b6015cea86.jpg"
-        alt="Meme random"></p>
+<p>Prueba amend <- corregi el amend<p>
+        <img src="https://media.makeameme.org/created/i-did-it-b6015cea86.jpg" alt="Meme random"></p>
