Personal page Desktop realizada

--- a/index.html
+++ b/index.html
@@ -1,30 +1,150 @@
-<h1>Hello World</h1>
-<p>My first Personal Page</p>
-<p>Experimento 1</p>
-<p>Experimento 2</p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="mobile.css" media="(max-width: 414px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&family=Raleway&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9289d5a95f.js" crossorigin="anonymous"></script>
+    <title>Document</title>
+</head>
 
+<body>
+    <nav id="navbar">
+        <ul>
+            <li>
+                <a href="#welcome-section">About</a>
+            </li>
+            <li>
+                <a href="#projects">Work</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <section id="welcome-section">
+        <div class="box-text">
+            <h1>
+                Hello, I am Luis Eduardo Tenorio Hernández
+            </h1>
+            <p>
+                A web developer in progress
+            </p>
+        </div>
+    </section>
+    <section id="projects">
+        <h2>Some of my projects</h2>
+        <div id="projects-box">
+            <a href="" class="project-tile">
+                <img src="https://4.bp.blogspot.com/-FcD_55z9x-M/UjYoqs6cRfI/AAAAAAAACA8/hHCXNPe9nTg/s1600/vivencias+hoja+en+blanco.jpg"
+                    alt=" project">
+                <p class="project-title">
+                    <span class="code">
+                        < </span>Project<span class="code"> / ></span>
+                </p>
+                <p class="project-date">Fecha</p>
+            </a>
+            <a href="" class="project-tile">
+                <img src="https://4.bp.blogspot.com/-FcD_55z9x-M/UjYoqs6cRfI/AAAAAAAACA8/hHCXNPe9nTg/s1600/vivencias+hoja+en+blanco.jpg"
+                    alt=" project">
+                <p class="project-title">
+                    <span class="code">
+                        < </span>Project<span class="code"> / ></span>
+                </p>
+                <p class="project-date">Fecha</p>
+            </a>
+            <a href="" class="project-tile">
+                <img src="https://4.bp.blogspot.com/-FcD_55z9x-M/UjYoqs6cRfI/AAAAAAAACA8/hHCXNPe9nTg/s1600/vivencias+hoja+en+blanco.jpg"
+                    alt=" project">
+                <p class="project-title">
+                    <span class="code">
+                        < </span>Project<span class="code"> / ></span>
+                </p>
+                <p class="project-date">Fecha</p>
+            </a>
+            <a href="" class="project-tile">
+                <img src="https://4.bp.blogspot.com/-FcD_55z9x-M/UjYoqs6cRfI/AAAAAAAACA8/hHCXNPe9nTg/s1600/vivencias+hoja+en+blanco.jpg"
+                    alt=" project">
+                <p class="project-title">
+                    <span class="code">
+                        < </span>Project<span class="code"> / ></span>
+                </p>
+                <p class="project-date">Fecha</p>
+            </a>
+            <a href="" class="project-tile">
+                <img src="https://4.bp.blogspot.com/-FcD_55z9x-M/UjYoqs6cRfI/AAAAAAAACA8/hHCXNPe9nTg/s1600/vivencias+hoja+en+blanco.jpg"
+                    alt=" project">
+                <p class="project-title">
+                    <span class="code">
+                        < </span>Project<span class="code"> / ></span>
+                </p>
+                <p class="project-date">Fecha</p>
+            </a>
+            <a href="" class="project-tile">
+                <img
+                    src="https://4.bp.blogspot.com/-FcD_55z9x-M/UjYoqs6cRfI/AAAAAAAACA8/hHCXNPe9nTg/s1600/vivencias+hoja+en+blanco.jpg">
+                <p class="project-title">
+                    <span class="code">
+                        < </span>Project<span class="code"> / ></span>
+                </p>
+                <p class="project-date">Fecha</p>
+            </a>
+        </div>
+        <div class="container-btn">
+            <a class="btn" href="">Show all
+                <i class="fa-solid fa-chevron-right"></i>
+            </a>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="contact-section-header">
+            <h2>
+                Let's work together...
+            </h2>
+            <p>
+                How do you take your coffee?
+            </p>
+        </div>
+        <div class="contact-links">
+            <a href="https://www.facebook.com/luiseduardo.tenoriohernande" target="_blank">
+                <i class="fab fa-facebook-square"></i>
+                <p>Facebook</p>
+            </a>
+            <a href="https://www.instagram.com/luistenorio230/" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
+            <a href="https://twitter.com/LuisE_Tenorio" target="_blank">
+                <i class="fab fa-twitter"></i>
+                <p>Twitter</p>
+            </a>
+            <a href="https://github.com/LuisTenorioMX" target="_blank">
+                <i class="fab fa-github"></i>
+                <p>GitHub</p>
+            </a>
+            <a href="https://www.linkedin.com/in/luis-eduardo-tenorio-hernandez-587647184/" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+                <p>Linkedin</p>
+            </a>
+            <a>
+                <i class="fa-solid fa-envelope"></i>
+                <p>luisthekira@gmail.com</p>
+            </a>
+        </div>
+    </section>
+    <footer>
+        <P>Desconosco lo que se debe de poner aqui, equis d</P>
+    </footer>
+</body>
 
-
-Main 1
-
-Caso 1
-Caso 2
-
-Main 2
-
-Creado por el increíble Platzi team
-Commit 2
-commit 3
-
-Prueba 2
-
-<p>Prueba amend <- corregi el amend<p>
-        <img src="https://media.makeameme.org/created/i-did-it-b6015cea86.jpg" alt="Meme random"></p>
+</html>
