Termino de la versión mobile

--- a/index.html
+++ b/index.html
@@ -118,27 +118,27 @@
         <div class="contact-links">
             <a href="https://www.facebook.com/luiseduardo.tenoriohernande" target="_blank">
                 <i class="fab fa-facebook-square"></i>
-                <p>Facebook</p>
+                <p class="contact-links__text">Facebook</p>
             </a>
             <a href="https://www.instagram.com/luistenorio230/" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
-                <p>Instagram</p>
+                <p class="contact-links__text">Instagram</p>
             </a>
             <a href="https://twitter.com/LuisE_Tenorio" target="_blank">
                 <i class="fab fa-twitter"></i>
-                <p>Twitter</p>
+                <p class="contact-links__text">Twitter</p>
             </a>
             <a href="https://github.com/LuisTenorioMX" target="_blank">
                 <i class="fab fa-github"></i>
-                <p>GitHub</p>
+                <p class="contact-links__text">GitHub</p>
             </a>
             <a href="https://www.linkedin.com/in/luis-eduardo-tenorio-hernandez-587647184/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
-                <p>Linkedin</p>
+                <p class="contact-links__text">Linkedin</p>
             </a>
             <a>
                 <i class="fa-solid fa-envelope"></i>
-                <p>luisthekira@gmail.com</p>
+                <p class="contact-links__text">luisthekira@gmail.com</p>
             </a>
         </div>
     </section>
