cambio en los iconos de contacto

--- a/index.html
+++ b/index.html
@@ -136,10 +136,14 @@
                 <i class="fa-brands fa-linkedin"></i>
                 <p class="contact-links__text">Linkedin</p>
             </a>
-            <a>
+            <a id="contact-links__Email">
                 <i class="fa-solid fa-envelope"></i>
                 <p class="contact-links__text">luisthekira@gmail.com</p>
             </a>
+        </div>
+        <div id="contact-links__Email-mobile">
+            <i class="fa-solid fa-envelope"></i>
+            <p class="contact-links__text-mobile">luisthekira@gmail.com</p>
         </div>
     </section>
     <footer>
